--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
 
   </head>
   <body>
-    <h1 id="test"></h1>
-    <img id="my_image" src=""/>
+    <div id="container"></div>
   <script src="js/app.js" charset="utf-8"></script>
   </body>
 </html>
