--- a/index.html
+++ b/index.html
@@ -2,16 +2,27 @@
 <html lang="en" dir="ltr">
   <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title></title>
     <script
   src="https://code.jquery.com/jquery-3.3.1.js"
   integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
   crossorigin="anonymous"></script>
   <script type="text/javascript" src="node_modules/crypto-js/crypto-js.js"></script>
+  <link rel="stylesheet" href="/css/styles.css">
+  <link href="https://fonts.googleapis.com/css?family=Roboto" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css?family=Roboto|Titillium+Web" rel="stylesheet">
 
   </head>
   <body>
-    <div id="container"></div>
+    <div id="avengers">
+      <h1 id="avengersTitle" class="groupTitle">THE AVENGERS</h1>
+    <div id="avengersContainer"></div>
+  </div>
+  <div id="gotg">
+    <div id="gotgHeader"></div>
+    <h1 id="gotgTitle" class="groupTitle">GUARDIANS OF THE GALAXY</h1>
+  </div>
   <script src="js/app.js" charset="utf-8"></script>
   </body>
 </html>
