--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title></title>
+    <title>MCU Characters</title>
     <script
   src="https://code.jquery.com/jquery-3.3.1.js"
   integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60="
@@ -20,8 +20,8 @@
     <div id="avengersContainer"></div>
   </div>
   <div id="gotg">
-    <div id="gotgHeader"></div>
     <h1 id="gotgTitle" class="groupTitle">GUARDIANS OF THE GALAXY</h1>
+    <div id="gotgContainer"></div>
   </div>
   <script src="js/app.js" charset="utf-8"></script>
   </body>
