responsive design for width 1450px

--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
     <h1 id="gotgTitle" class="groupTitle">GUARDIANS OF THE GALAXY</h1>
     <div id="gotgContainer"></div>
   </div>
+  <div id="villains"></div>
+    <h1 id="villainsTitle" class="groupTitle">VILLAINS</h1>
   <script src="js/app.js" charset="utf-8"></script>
   </body>
 </html>
