--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
   </div>
   <div id="villains"></div>
     <h1 id="villainsTitle" class="groupTitle">VILLAINS</h1>
+    <div id="villainsContainer"></div>
   <script src="js/app.js" charset="utf-8"></script>
   </body>
 </html>
