--- a/index.html
+++ b/index.html
@@ -16,16 +16,21 @@
   </head>
   <body>
     <div id="avengers">
-      <h1 id="avengersTitle" class="groupTitle">THE AVENGERS</h1>
+      <h1 id="avengersTitle" class="groupTitle">THE ORIGINAL AVENGERS</h1>
     <div id="avengersContainer"></div>
   </div>
   <div id="gotg">
     <h1 id="gotgTitle" class="groupTitle">GUARDIANS OF THE GALAXY</h1>
     <div id="gotgContainer"></div>
   </div>
-  <div id="villains"></div>
+  <div id="villains">
     <h1 id="villainsTitle" class="groupTitle">VILLAINS</h1>
     <div id="villainsContainer"></div>
+  </div>
+  <div id="shield">
+    <h1 id="shieldTitle" class="groupTitle">S.H.I.E.L.D.</h1>
+    <div id="shieldContainer"></div>
+  </div>
   <script src="js/app.js" charset="utf-8"></script>
   </body>
 </html>
