--- a/index.html
+++ b/index.html
@@ -31,6 +31,15 @@
     <h1 id="shieldTitle" class="groupTitle">S.H.I.E.L.D.</h1>
     <div id="shieldContainer"></div>
   </div>
+  <!-- The Modal -->
+<div id="myModal" class="modal">
+
+  <!-- Modal content -->
+  <div class="modal-content">
+    <span class="close"></span>
+  </div>
+
+</div>
   <script src="js/app.js" charset="utf-8"></script>
   </body>
 </html>
