--- a/index.html
+++ b/index.html
@@ -36,7 +36,8 @@
 
   <!-- Modal content -->
   <div class="modal-content">
-    <span class="close"></span>
+  <div id="heroModalNameContainer" class="modalGridItem"></div>
+  <div class="closeButton"><span class="close">&times;</span></div>
   </div>
 
 </div>
