--- a/index.html
+++ b/index.html
@@ -14,6 +14,14 @@
 </head>
 
 <body>
+  <div id="inputKeys">
+    <form id="form" onsubmit="return false;">
+      <input id="publicKeyInput" type="text"/>
+      <input id="privateKeyInput" type="text"/>
+      <input  type="submit" onclick="othername()" />
+    </form>
+  </div>
+  <div id="characters">
     <div id="avengers">
         <h1 id="avengersTitle" class="groupTitle">THE ORIGINAL AVENGERS</h1>
         <div id="avengersContainer"></div>
@@ -30,6 +38,7 @@
         <h1 id="shieldTitle" class="groupTitle">S.H.I.E.L.D.</h1>
         <div id="shieldContainer"></div>
     </div>
+  </div>
     <!-- The Modal -->
     <div id="myModal" class="modal">
 
