--- a/index.html
+++ b/index.html
@@ -16,7 +16,10 @@
 <body>
   <div id="inputKeys">
     <form id="form" onsubmit="return false;">
+      <label for="publicKeyInput">Enter your Public Key</label>
       <input id="publicKeyInput" type="text"/>
+
+      <label for="privateKeyInput">Enter your Private Key</label>
       <input id="privateKeyInput" type="text"/>
       <input  type="submit" onclick="othername()" />
     </form>
