--- a/index.html
+++ b/index.html
@@ -22,7 +22,10 @@
       <label for="privateKeyInput">Enter your Private Key</label>
       <input id="privateKeyInput" type="text"/>
       <input  type="submit" onclick="othername()" />
+      <div id="refer"><p>Don't have a key? Head over <a href="https://developer.marvel.com/">Here</a></p></div>
     </form>
+
+
   </div>
   <div id="characters">
     <div id="avengers">
